--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "[636 rows x 23 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,6 +731,470 @@
     "data_2015 = sui_2015.merge(happy_2015, on='country')\n",
     "data_2016 = sui_2016.merge(happy_2016, on='country')\n",
     "data_2015"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country\n",
+      "year\n",
+      "sex\n",
+      "age\n",
+      "suicides_no\n",
+      "population\n",
+      "suicides/100k pop\n",
+      "country-year\n",
+      "HDI for year\n",
+      " gdp_for_year ($) \n",
+      "gdp_per_capita ($)\n",
+      "generation\n",
+      "Region\n",
+      "Happiness Rank\n",
+      "Happiness Score\n",
+      "Lower Confidence Interval\n",
+      "Upper Confidence Interval\n",
+      "Economy (GDP per Capita)\n",
+      "Family\n",
+      "Health (Life Expectancy)\n",
+      "Freedom\n",
+      "Trust (Government Corruption)\n",
+      "Generosity\n",
+      "Dystopia Residual\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in data_2016.columns:\n",
+    "    print(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop useless columns\n",
+    "data_2015 = data_2015.drop(columns=['country-year','HDI for year'])\n",
+    "data_2016 = data_2016.drop(columns=['country-year','HDI for year'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>suicides_no</th>\n",
+       "      <th>population</th>\n",
+       "      <th>suicides/100k pop</th>\n",
+       "      <th>gdp_for_year ($)</th>\n",
+       "      <th>gdp_per_capita ($)</th>\n",
+       "      <th>generation</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Happiness Score</th>\n",
+       "      <th>Lower Confidence Interval</th>\n",
+       "      <th>Upper Confidence Interval</th>\n",
+       "      <th>Economy (GDP per Capita)</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>Health (Life Expectancy)</th>\n",
+       "      <th>Freedom</th>\n",
+       "      <th>Trust (Government Corruption)</th>\n",
+       "      <th>Generosity</th>\n",
+       "      <th>Dystopia Residual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>male</td>\n",
+       "      <td>75+ years</td>\n",
+       "      <td>12</td>\n",
+       "      <td>61956</td>\n",
+       "      <td>19.37</td>\n",
+       "      <td>10,546,135,160</td>\n",
+       "      <td>3788</td>\n",
+       "      <td>Silent</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.360</td>\n",
+       "      <td>4.266</td>\n",
+       "      <td>4.454</td>\n",
+       "      <td>0.86086</td>\n",
+       "      <td>0.62477</td>\n",
+       "      <td>0.64083</td>\n",
+       "      <td>0.14037</td>\n",
+       "      <td>0.03616</td>\n",
+       "      <td>0.07793</td>\n",
+       "      <td>1.97864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>male</td>\n",
+       "      <td>55-74 years</td>\n",
+       "      <td>16</td>\n",
+       "      <td>237813</td>\n",
+       "      <td>6.73</td>\n",
+       "      <td>10,546,135,160</td>\n",
+       "      <td>3788</td>\n",
+       "      <td>Boomers</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.360</td>\n",
+       "      <td>4.266</td>\n",
+       "      <td>4.454</td>\n",
+       "      <td>0.86086</td>\n",
+       "      <td>0.62477</td>\n",
+       "      <td>0.64083</td>\n",
+       "      <td>0.14037</td>\n",
+       "      <td>0.03616</td>\n",
+       "      <td>0.07793</td>\n",
+       "      <td>1.97864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35-54 years</td>\n",
+       "      <td>16</td>\n",
+       "      <td>350633</td>\n",
+       "      <td>4.56</td>\n",
+       "      <td>10,546,135,160</td>\n",
+       "      <td>3788</td>\n",
+       "      <td>Generation X</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.360</td>\n",
+       "      <td>4.266</td>\n",
+       "      <td>4.454</td>\n",
+       "      <td>0.86086</td>\n",
+       "      <td>0.62477</td>\n",
+       "      <td>0.64083</td>\n",
+       "      <td>0.14037</td>\n",
+       "      <td>0.03616</td>\n",
+       "      <td>0.07793</td>\n",
+       "      <td>1.97864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>male</td>\n",
+       "      <td>15-24 years</td>\n",
+       "      <td>5</td>\n",
+       "      <td>202220</td>\n",
+       "      <td>2.47</td>\n",
+       "      <td>10,546,135,160</td>\n",
+       "      <td>3788</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.360</td>\n",
+       "      <td>4.266</td>\n",
+       "      <td>4.454</td>\n",
+       "      <td>0.86086</td>\n",
+       "      <td>0.62477</td>\n",
+       "      <td>0.64083</td>\n",
+       "      <td>0.14037</td>\n",
+       "      <td>0.03616</td>\n",
+       "      <td>0.07793</td>\n",
+       "      <td>1.97864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>female</td>\n",
+       "      <td>75+ years</td>\n",
+       "      <td>2</td>\n",
+       "      <td>102414</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>10,546,135,160</td>\n",
+       "      <td>3788</td>\n",
+       "      <td>Silent</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.360</td>\n",
+       "      <td>4.266</td>\n",
+       "      <td>4.454</td>\n",
+       "      <td>0.86086</td>\n",
+       "      <td>0.62477</td>\n",
+       "      <td>0.64083</td>\n",
+       "      <td>0.14037</td>\n",
+       "      <td>0.03616</td>\n",
+       "      <td>0.07793</td>\n",
+       "      <td>1.97864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>female</td>\n",
+       "      <td>75+ years</td>\n",
+       "      <td>69</td>\n",
+       "      <td>1589015</td>\n",
+       "      <td>4.34</td>\n",
+       "      <td>411,755,164,833</td>\n",
+       "      <td>6713</td>\n",
+       "      <td>Silent</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.474</td>\n",
+       "      <td>6.396</td>\n",
+       "      <td>6.552</td>\n",
+       "      <td>1.08930</td>\n",
+       "      <td>1.04477</td>\n",
+       "      <td>0.64915</td>\n",
+       "      <td>0.49553</td>\n",
+       "      <td>0.02833</td>\n",
+       "      <td>0.58696</td>\n",
+       "      <td>2.57960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>female</td>\n",
+       "      <td>55-74 years</td>\n",
+       "      <td>222</td>\n",
+       "      <td>6049756</td>\n",
+       "      <td>3.67</td>\n",
+       "      <td>411,755,164,833</td>\n",
+       "      <td>6713</td>\n",
+       "      <td>Boomers</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.474</td>\n",
+       "      <td>6.396</td>\n",
+       "      <td>6.552</td>\n",
+       "      <td>1.08930</td>\n",
+       "      <td>1.04477</td>\n",
+       "      <td>0.64915</td>\n",
+       "      <td>0.49553</td>\n",
+       "      <td>0.02833</td>\n",
+       "      <td>0.58696</td>\n",
+       "      <td>2.57960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35-54 years</td>\n",
+       "      <td>375</td>\n",
+       "      <td>10629684</td>\n",
+       "      <td>3.53</td>\n",
+       "      <td>411,755,164,833</td>\n",
+       "      <td>6713</td>\n",
+       "      <td>Generation X</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.474</td>\n",
+       "      <td>6.396</td>\n",
+       "      <td>6.552</td>\n",
+       "      <td>1.08930</td>\n",
+       "      <td>1.04477</td>\n",
+       "      <td>0.64915</td>\n",
+       "      <td>0.49553</td>\n",
+       "      <td>0.02833</td>\n",
+       "      <td>0.58696</td>\n",
+       "      <td>2.57960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>female</td>\n",
+       "      <td>25-34 years</td>\n",
+       "      <td>116</td>\n",
+       "      <td>4702656</td>\n",
+       "      <td>2.47</td>\n",
+       "      <td>411,755,164,833</td>\n",
+       "      <td>6713</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.474</td>\n",
+       "      <td>6.396</td>\n",
+       "      <td>6.552</td>\n",
+       "      <td>1.08930</td>\n",
+       "      <td>1.04477</td>\n",
+       "      <td>0.64915</td>\n",
+       "      <td>0.49553</td>\n",
+       "      <td>0.02833</td>\n",
+       "      <td>0.58696</td>\n",
+       "      <td>2.57960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>female</td>\n",
+       "      <td>15-24 years</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4525574</td>\n",
+       "      <td>1.33</td>\n",
+       "      <td>411,755,164,833</td>\n",
+       "      <td>6713</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.474</td>\n",
+       "      <td>6.396</td>\n",
+       "      <td>6.552</td>\n",
+       "      <td>1.08930</td>\n",
+       "      <td>1.04477</td>\n",
+       "      <td>0.64915</td>\n",
+       "      <td>0.49553</td>\n",
+       "      <td>0.02833</td>\n",
+       "      <td>0.58696</td>\n",
+       "      <td>2.57960</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>150 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      country  year     sex          age  suicides_no  population  \\\n",
+       "0     Armenia  2016    male    75+ years           12       61956   \n",
+       "1     Armenia  2016    male  55-74 years           16      237813   \n",
+       "2     Armenia  2016    male  35-54 years           16      350633   \n",
+       "3     Armenia  2016    male  15-24 years            5      202220   \n",
+       "4     Armenia  2016  female    75+ years            2      102414   \n",
+       "..        ...   ...     ...          ...          ...         ...   \n",
+       "145  Thailand  2016  female    75+ years           69     1589015   \n",
+       "146  Thailand  2016  female  55-74 years          222     6049756   \n",
+       "147  Thailand  2016  female  35-54 years          375    10629684   \n",
+       "148  Thailand  2016  female  25-34 years          116     4702656   \n",
+       "149  Thailand  2016  female  15-24 years           60     4525574   \n",
+       "\n",
+       "     suicides/100k pop  gdp_for_year ($)   gdp_per_capita ($)    generation  \\\n",
+       "0                19.37     10,546,135,160                3788        Silent   \n",
+       "1                 6.73     10,546,135,160                3788       Boomers   \n",
+       "2                 4.56     10,546,135,160                3788  Generation X   \n",
+       "3                 2.47     10,546,135,160                3788    Millenials   \n",
+       "4                 1.95     10,546,135,160                3788        Silent   \n",
+       "..                 ...                ...                 ...           ...   \n",
+       "145               4.34    411,755,164,833                6713        Silent   \n",
+       "146               3.67    411,755,164,833                6713       Boomers   \n",
+       "147               3.53    411,755,164,833                6713  Generation X   \n",
+       "148               2.47    411,755,164,833                6713    Millenials   \n",
+       "149               1.33    411,755,164,833                6713    Millenials   \n",
+       "\n",
+       "     ... Happiness Score  Lower Confidence Interval  \\\n",
+       "0    ...           4.360                      4.266   \n",
+       "1    ...           4.360                      4.266   \n",
+       "2    ...           4.360                      4.266   \n",
+       "3    ...           4.360                      4.266   \n",
+       "4    ...           4.360                      4.266   \n",
+       "..   ...             ...                        ...   \n",
+       "145  ...           6.474                      6.396   \n",
+       "146  ...           6.474                      6.396   \n",
+       "147  ...           6.474                      6.396   \n",
+       "148  ...           6.474                      6.396   \n",
+       "149  ...           6.474                      6.396   \n",
+       "\n",
+       "     Upper Confidence Interval  Economy (GDP per Capita)   Family  \\\n",
+       "0                        4.454                   0.86086  0.62477   \n",
+       "1                        4.454                   0.86086  0.62477   \n",
+       "2                        4.454                   0.86086  0.62477   \n",
+       "3                        4.454                   0.86086  0.62477   \n",
+       "4                        4.454                   0.86086  0.62477   \n",
+       "..                         ...                       ...      ...   \n",
+       "145                      6.552                   1.08930  1.04477   \n",
+       "146                      6.552                   1.08930  1.04477   \n",
+       "147                      6.552                   1.08930  1.04477   \n",
+       "148                      6.552                   1.08930  1.04477   \n",
+       "149                      6.552                   1.08930  1.04477   \n",
+       "\n",
+       "     Health (Life Expectancy)  Freedom  Trust (Government Corruption)  \\\n",
+       "0                     0.64083  0.14037                        0.03616   \n",
+       "1                     0.64083  0.14037                        0.03616   \n",
+       "2                     0.64083  0.14037                        0.03616   \n",
+       "3                     0.64083  0.14037                        0.03616   \n",
+       "4                     0.64083  0.14037                        0.03616   \n",
+       "..                        ...      ...                            ...   \n",
+       "145                   0.64915  0.49553                        0.02833   \n",
+       "146                   0.64915  0.49553                        0.02833   \n",
+       "147                   0.64915  0.49553                        0.02833   \n",
+       "148                   0.64915  0.49553                        0.02833   \n",
+       "149                   0.64915  0.49553                        0.02833   \n",
+       "\n",
+       "     Generosity  Dystopia Residual  \n",
+       "0       0.07793            1.97864  \n",
+       "1       0.07793            1.97864  \n",
+       "2       0.07793            1.97864  \n",
+       "3       0.07793            1.97864  \n",
+       "4       0.07793            1.97864  \n",
+       "..          ...                ...  \n",
+       "145     0.58696            2.57960  \n",
+       "146     0.58696            2.57960  \n",
+       "147     0.58696            2.57960  \n",
+       "148     0.58696            2.57960  \n",
+       "149     0.58696            2.57960  \n",
+       "\n",
+       "[150 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# clean_2015_data = data_2015.dropna()\n",
+    "data_2016.dropna()\n",
+    "data_2016"
    ]
   },
   {
