successfully loaded data into MongoDB

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2078,6 +2078,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country\n",
+      "year_x\n",
+      "sex\n",
+      "age\n",
+      "suicides_no\n",
+      "population\n",
+      "suicides/100k pop\n",
+      "country-year\n",
+      "HDI for year\n",
+      " gdp_for_year ($) \n",
+      "gdp_per_capita ($)\n",
+      "generation\n",
+      "Region\n",
+      "Happiness Rank\n",
+      "Happiness Score\n",
+      "Standard Error\n",
+      "Economy (GDP per Capita)\n",
+      "Family\n",
+      "Health (Life Expectancy)\n",
+      "Freedom\n",
+      "Trust (Government Corruption)\n",
+      "Generosity\n",
+      "Dystopia Residual\n",
+      "year_y\n",
+      "Lower Confidence Interval\n",
+      "Upper Confidence Interval\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in full_data.columns:\n",
+    "    print(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove all the unnecessary columns from the full data set\n",
+    "cleaned_data = full_data.drop(columns=['year_y','Economy (GDP per Capita)','HDI for year','country-year'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export full data file as csv to then be moved to MongoDB\n",
+    "cleaned_data.to_csv(r'C:\\Users\\lakew\\Documents\\DuCamp\\ETL-project\\Clean_data\\cleaned_data.csv', index=False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -3887,7 +3950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
